Fix weird spacing between select elements
It is actually a problem with the `input` elements

--- a/app/static/resources/css/transcriber.css
+++ b/app/static/resources/css/transcriber.css
@@ -80,9 +80,16 @@ hr {
     display: flex;
 }
 
-.section-input * {
-    width: 50%;
+.section-input label, select, input[type="number"] {
     margin: auto;
+}
+
+.section-input label, select {
+    width: 50%;
+}
+
+.section-input input[type="number"] {
+    width: calc(50% - 8px);  /* 8px is for the buttons for number selection */
 }
 
 .section-input input:invalid {
